[gd_scene load_steps=27 format=3 uid="uid://cu6b4nmm41jpn"]

[ext_resource type="Script" path="res://objects/chest.gd" id="1_4kr2q"]
[ext_resource type="Script" path="res://objects/chestLoot/chestLoot.gd" id="2_3yw5t"]
[ext_resource type="Script" path="res://Items/active_items/ActivePickup.gd" id="3_8qoxe"]
[ext_resource type="Script" path="res://Items/script/BaseItemScript.gd" id="3_ijl35"]
[ext_resource type="Resource" uid="uid://c2v6ggc2es5ec" path="res://Items/active_items/Yoyo.tres" id="4_pxahm"]
[ext_resource type="Resource" uid="uid://d4jts1mggxvj5" path="res://Items/active_items/Spring.tres" id="5_0thd7"]
[ext_resource type="Resource" uid="uid://bg8f6mbdk5m11" path="res://Items/active_items/StrongArms.tres" id="6_157j3"]
[ext_resource type="Script" path="res://objects/chestLoot/itemLoot.gd" id="6_m8sn5"]
[ext_resource type="Script" path="res://objects/chestLoot/activeLoot.gd" id="6_sjb08"]
[ext_resource type="PackedScene" uid="uid://cjncsqrktcsaa" path="res://States/status_manager.tscn" id="6_v0d5c"]
[ext_resource type="Resource" uid="uid://dq02ex2fcx1fx" path="res://Items/resources/Boomerang.tres" id="7_eo6n4"]
[ext_resource type="Resource" uid="uid://dg1bhubk2uapa" path="res://Items/resources/CrowbarItem.tres" id="8_4xy8e"]
[ext_resource type="Resource" uid="uid://cgxfhx5qk08bs" path="res://Items/resources/ExplosiveAmmo.tres" id="9_453wt"]
[ext_resource type="Resource" uid="uid://c3whyfnddxxto" path="res://Items/resources/Matchbox.tres" id="10_oxufj"]
[ext_resource type="Resource" uid="uid://b3k1gcuraaxnj" path="res://Items/resources/QuickBoots.tres" id="11_l3nks"]
[ext_resource type="Resource" uid="uid://cvul5ixaw8om2" path="res://Items/resources/ReloadBuster.tres" id="12_ai1ju"]
[ext_resource type="Resource" uid="uid://b47mgjpf11bua" path="res://Items/resources/SharpBullet.tres" id="13_25yfr"]
[ext_resource type="Resource" uid="uid://b0o06j21ngy0x" path="res://Items/resources/ShildGenerator.tres" id="14_i0b5f"]
[ext_resource type="Resource" uid="uid://bt4xggfqueu67" path="res://Items/resources/SplitShooter.tres" id="15_oklo6"]
[ext_resource type="Resource" uid="uid://ni0hxh5fpvib" path="res://Items/resources/TrainingWeights.tres" id="16_nlsxl"]
[ext_resource type="Texture2D" uid="uid://dykxfkrakmb6k" path="res://pixel art/chest.png" id="20_u5oh4"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_s4bao"]

[sub_resource type="Resource" id="Resource_8ge7l"]
script = ExtResource("6_sjb08")
reward = Array[ExtResource("3_8qoxe")]([ExtResource("4_pxahm"), ExtResource("5_0thd7"), ExtResource("6_157j3")])
chance = 30.0

[sub_resource type="Resource" id="Resource_q2tut"]
script = ExtResource("6_m8sn5")
reward = Array[ExtResource("3_ijl35")]([ExtResource("7_eo6n4"), ExtResource("8_4xy8e"), ExtResource("9_453wt"), ExtResource("10_oxufj"), ExtResource("11_l3nks"), ExtResource("12_ai1ju"), ExtResource("13_25yfr"), ExtResource("14_i0b5f"), ExtResource("15_oklo6"), ExtResource("16_nlsxl")])
chance = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8k5k"]
size = Vector2(112, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7by82"]
size = Vector2(48, 48)

[node name="tier2chest" type="RigidBody2D"]
position = Vector2(0, 24)
collision_layer = 6
collision_mask = 129
physics_material_override = SubResource("PhysicsMaterial_s4bao")
gravity_scale = 0.0
lock_rotation = true
linear_damp = 10.0
script = ExtResource("1_4kr2q")
chestProbabillity = Array[ExtResource("2_3yw5t")]([SubResource("Resource_8ge7l"), SubResource("Resource_q2tut")])

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_g8k5k")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_7by82")

[node name="status_manager" parent="." instance=ExtResource("6_v0d5c")]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(0.5, 0.5)
texture = ExtResource("20_u5oh4")
hframes = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
